# C-Projects

./: Accumulate  CMakeLists.txt  Coin  Compare  Find  Letters.c  README.md  Range  SelectionSort
Caesar/: Caesar.c
Coin/: Coin.c
Polygonal/: Polygonal.c
Quadratic/: Quadratic.c
